# yaus

./: Cargo.toml  README.md  docker-compose.yml
migrations/: 20220830171851_initial.sql
src/: main.rs
src/api/: url.rs
src/db/: mod.rs
yaus/: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose-dev.yml  docker-compose.yml  sqlx-data.json
yaus-cli/: Cargo.toml
yaus-cli/src/: cli.rs  config.rs  default_config.toml  main.rs
yaus-cli/src/api/: client.rs  errors.rs  mod.rs  request.rs  yaus.rs
yaus/src/: config.rs  default_config.toml  main.rs
yaus/src/api/: middleware.rs  mod.rs  url.rs
yaus/src/db/: mod.rs  url.rs
