[package]
name = "yaus-cli"
description = "A CLI client for the Yaus server"
license = "GPL-2.0-only"
repository = "https://github.com/MikMuellerDev/yaus"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = [
  "json",
  "rustls-tls",
], default-features = false }
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
url = "2.2.2"
clap = { version = "3.2.17", features = ["derive"] }
toml = "0.5.9"
cli-table = "0.4.7"
