[package]
name = "yaus"
version = "0.1.0"
edition = "2021"
default-run = "yaus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde = { version = "1.0.137", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres", "offline" ] }
tokio-postgres = "0.7.6"
env_logger = "0.8"
log = "0.4.17"
futures-util = "0.3.24"

